Still having positioning issues. Did not want to spend too much time on this instead of the javascript.

--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,17 @@ body{
 	font-family: Times New Roman, serif;
 }
 
+img{
+
+	margin: 0;
+	padding: 0;
+	display: block;
+	max-width: 100%;
+}
+
 .wrapper{
-	width: 100%;
+	width: 95%;
+	margin: 0 auto;
 }
 
 .banner{
@@ -30,6 +39,7 @@ body{
 	background-repeat: no-repeat;
 	color: #af5017;
 	text-align: center;
+	font-style: italic;
 
 }
 
@@ -39,25 +49,43 @@ body{
 
 .membership{
 	background-image: url(../img/pattern_1.jpg);
-	background-repeat: repeat-x;
-	background-origin: bottom;
-	margin-top: 100px;
+	background-size: auto 100%;
+	height: 50px;
 	font-family: sans-serif;
+	position: relative;
 	color: #af5017;
+	margin: 90px 0 50px 0;
+}
+
+.membership a{
+	display: block;
+	width: 200px;
+	margin: 0 auto;
+	position: absolute;
+	bottom: -5px;
+	left: 0;
+	right: 0;
+	color: #af5017;
+
+}
+
+.logo{
+	width: 95%;
 }
 
 .membership img{ 
-	position: relative;
-	bottom: 85px;
-	left: 50px;
+	display: block;
+	width: 100%;
 }
 
-/*.membership p{ 
-	position: relative;
-	bottom: 85px;
-	left: 50px;
-	clear: both;
-}*/
+.membership span{
+	display: block;
+	width: 160px;
+	position: absolute;
+	left: 17px;
+	bottom: 28px;
+	text-align: center;
+}
 
 .foot{
 	background-image: url(../img/pattern_2.jpg);
@@ -95,19 +123,17 @@ header{
 	text-align: center;
 	padding-bottom: 10px;
 	padding-top: 10px; 
+	width: 100%;
 }
 
-.head img{
-	width: 100%
-}
 
 .sidebar{
 	display: none;
 }
 
 
-.shows{
-
+.shows ul{
+	list-style: none;
 }
 
 
@@ -138,6 +164,112 @@ header{
 /**********************************/
 
 @media screen and (min-width: 680px){
+
+header{
+	display: none;
+}
+
+.sidebar {
+	display: inline-block;
+	width: 30%;
+}
+
+.sidebar ul{
+	list-style: none;
+	float: left;
+	text-align: right;
+	color: #850c0c;
+	border-right: 1px solid grey;
+	font-family: sans-serif;
+
+}
+
+.sidebar li:last-child{
+	background-color: #f6f6f4;
+	border: 1px solid grey;
+	border-radius: 5px;
+	font-style: bold;
+	padding: 10px;
+	font-weight: bold;
+
+} 
+
+.main_img img{
+	float: right;
+	width: 55%;
+
+}
+
+
+.william {
+	width: 30%;
+	float: right;
+}
+
+.logo {
+	width: 40%;
+	float: left;
+}
+
+.shows ul{
+	list-style: none;
+	margin: 0 auto;
+	padding: 0px;
+	width: 100%
+
+	
+}
+
+.shows li{
+	width: 22%;
+	display: inline-block;
+	vertical-align: top;
+	
+}
+
+.shows a{
+	background-color: #f0ede4;
+	color: #e60000;
+	text-decoration: underline;
+	text-align: left;
+	margin: 0;
+	padding: 0;
+}
+
+.shows img{
+	clear: both;
+}
+
+.email{
+	display: none;
+}
+
+
+.email1{
+	display: inline-block;
+	width: 20%;
+	position: relative;
+	left: 450px;
+	padding: 0;
+
+
+}
+
+
+
+.text{
+	color: grey;
+	font-style: italic;
+}
+
+.submit{
+	background-color: #8c1b1a;
+	margin: 0 auto;
+	color: white;
+	text-decoration: none;
+	border: none;
+}
+
 
 	
 }
